--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -45,3 +45,10 @@
 .animate-float {
   animation: float 3s ease-in-out infinite;
 }
+
+body {
+  min-height: 100vh;
+  background-color: #ffffff;
+  background: radial-gradient(125% 125% at 50% 10%, #fff 40%, #63e 100%);
+  background-repeat: no-repeat;
+}
